# ZedID

./: .env.example  .gitignore  Cargo.toml  README.md
zedid-core/: Cargo.toml
zedid-core/src/: config.rs  main.rs  state.rs
zedid-core/src/api/: audit.rs  health.rs  identities.rs  mod.rs  policies.rs
zedid-core/static/: app.js  index.html  style.css
zedid-identity/: Cargo.toml
zedid-identity/src/: error.rs  jwt.rs  lib.rs  models.rs  spiffe.rs
zedid-policy/: Cargo.toml
zedid-policy/src/: engine.rs  error.rs  generator.rs  lib.rs  models.rs  tars.rs
