[package]
name = "zedid-core"
version.workspace = true
edition.workspace = true

[[bin]]
name = "zedid"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
sqlx.workspace = true
config.workspace = true
dotenvy.workspace = true
base64.workspace = true
rand.workspace = true
jsonwebtoken.workspace = true
zedid-identity = { path = "../zedid-identity" }
zedid-policy = { path = "../zedid-policy" }
