[package]
name = "zedid-identity"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
base64.workspace = true
sha2.workspace = true
hmac.workspace = true
rand.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
